--- a/templates/admin.html
+++ b/templates/admin.html
@@ -16,7 +16,6 @@
         border-color: #71887f;
     }
 
-
     </style>
 
 
@@ -34,42 +33,46 @@
             <div class="box">
                 {% if current_users %}
                     <div class="field">
-                        <table class="table">
-                            <tr>
-                                <th>ID</th>
-                                <th>Email</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Phone Number</th>
-                                <th>Role</th>
-                            </tr>
-                            {% for user in current_users %}
+                        <table class="table table-striped table-hover">
+                            <thead>
                                 <tr>
-                                    <td>{{ user.id }}</td>
-                                    <td>{{ user.email }}</td>
-                                    <td>{{ user.firstname }}</td>
-                                    <td>{{ user.lastname }}</td>
-                                    <td>{{ user.phone }}</td>
-                                    <td>{{ user.role }}</td>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">First Name</th>
+                                    <th scope="col">Last Name</th>
+                                    <th scope="col">Phone Number</th>
+                                    <th scope="col">Role</th>
                                 </tr>
-                            {% endfor %}
+                            </thead>
+                            <tbody>
+                                {% for user in current_users %}
+                                    <tr>
+                                        <td>{{ user.id }}</td>
+                                        <td>{{ user.email }}</td>
+                                        <td>{{ user.firstname }}</td>
+                                        <td>{{ user.lastname }}</td>
+                                        <td>{{ user.phone }}</td>
+                                        <td>{{ user.role }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+
                         </table>
                     </div>
                 {% endif %}
                 <form method="POST" action="/view_all_users">
                     <div>
-                        <button class="btn btn-lg btn-primary is-info is-centered">View All Users</button>
+                        <button class="btn btn-primary btn-rounded">View All Users</button>
                     </div>
                 </form>
             </div>
-
 
 
             <h4 class="section-title">Security Logs</h4>
             <div class="box">
                 {% if logs %}
                     <div class="field">
-                        <table class="table">
+                        <table class="table table-hover">
                             <tr>
                                 <th>Last 10 Security Log Entries</th>
                             </tr>
@@ -83,39 +86,41 @@
                 {% endif %}
                 <form method="POST" action="/logs">
                     <div>
-                        <button class="btn btn-lg btn-primary is-info is-centered">View Logs</button>
+                        <button class="btn btn-primary btn-rounded">View Logs</button>
                     </div>
                 </form>
             </div>
-
-
 
 
             <h4 class="section-title">Challenges Joined by Users</h4>
             <div class="box">
                 {% if joined_challenges %}
                     <div class="field">
-                        <table class="table">
-                            <tr>
-                                <th>Join ID</th>
-                                <th>User Email</th>
-                                <th>Challenge ID</th>
-                                <th>Date Joined</th>
-                            </tr>
-                            {% for challenge in joined_challenges %}
+                        <table class="table table-hover">
+                            <thead>
                                 <tr>
-                                    <td>{{ challenge.id }}</td>
-                                    <td>{{ challenge.user_email }}</td>
-                                    <td>{{ challenge.challenge_id }}</td>
-                                    <td>{{ challenge.date_joined.strftime('%d-%m-%Y') }}</td>
+                                    <th scope="col">Join ID</th>
+                                    <th scope="col">User Email</th>
+                                    <th scope="col">Challenge ID</th>
+                                    <th scope="col">Date Joined</th>
                                 </tr>
-                            {% endfor %}
+                            </thead>
+                            <tbody>
+                                {% for challenge in joined_challenges %}
+                                    <tr>
+                                        <td>{{ challenge.id }}</td>
+                                        <td>{{ challenge.user_email }}</td>
+                                        <td>{{ challenge.challenge_id }}</td>
+                                        <td>{{ challenge.date_joined.strftime('%d-%m-%Y') }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
                         </table>
                     </div>
                 {% endif %}
                 <form method="POST" action="/view_all_joined_challenges">
                     <div>
-                        <button class="btn btn-lg btn-primary is-info is-centered">View All Joined Challenges</button>
+                        <button class="btn btn-primary btn-rounded">View All Joined Challenges</button>
                     </div>
                 </form>
             </div>
@@ -125,31 +130,35 @@
             <div class="box">
                 {% if donations %}
                     <div class="field">
-                        <table class="table">
-                            <tr>
-                                <th>ID</th>
-                                <th>Email</th>
-                                <th>Reason</th>
-                                <th>Amount</th>
-                                <th>Donated</th>
-                                <th>Status</th>
-                            </tr>
-                            {% for donation in donations %}
+                        <table class="table table-hover">
+                            <thead>
                                 <tr>
-                                    <td>{{ donation.id }}</td>
-                                    <td>{{ donation.email }}</td>
-                                    <td>{{ donation.reason }}</td>
-                                    <td>{{ donation.amount }}</td>
-                                    <td>{{ donation.donated }}</td>
-                                    <td>{{ donation.status }}</td>
+                                    <th scope="col">ID</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Reason</th>
+                                    <th scope="col">Amount</th>
+                                    <th scope="col">Donated</th>
+                                    <th scope="col">Status</th>
                                 </tr>
-                            {% endfor %}
+                            </thead>
+                            <tbody>
+                                {% for donation in donations %}
+                                    <tr>
+                                        <td>{{ donation.id }}</td>
+                                        <td>{{ donation.email }}</td>
+                                        <td>{{ donation.reason }}</td>
+                                        <td>{{ donation.amount }}</td>
+                                        <td>{{ donation.donated }}</td>
+                                        <td>{{ donation.status }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
                         </table>
                     </div>
                 {% endif %}
                 <form method="POST" action="/view_all_donations">
                     <div>
-                        <button class="btn btn-lg btn-primary is-info is-centered">View All Donations</button>
+                        <button class="btn btn-primary btn-rounded">View All Donations</button>
                     </div>
                 </form>
             </div>
