--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -7,7 +7,7 @@
     <style>
 
         .title{
-            margin-bottom: 15px;
+            margin-bottom: 60px;
         }
 
         .field {
@@ -17,9 +17,8 @@
         .form-control {
             font-family: Arial, serif;
             border-radius: 10px;
-            border: 1px solid darkgrey;
+            border: 1px solid #59886f;
             padding: 15px;
-
         }
 
         .error{
@@ -29,7 +28,6 @@
         .btn{
             background-color: #59886f;
             border-color: #59886f;
-
         }
 
         .btn:hover{
@@ -37,16 +35,10 @@
             border-color: #71887f;
         }
 
-        .text-center {
-            text-align: center;
-        }
-
     </style>
 
     <div class="column is-6 is-offset-3">
         <h3 class="title is-3">Create Post</h3>
-        <br>
-        <br>
         <div class="box">
             <form method="POST" enctype="multipart/form-data">
                 <div class="field">
@@ -77,7 +69,7 @@
                 </div>
                 <br>
                 <div>
-                    {{ form.submit(class="btn btn-primary d-grid gap-2 col-6 mx-auto") }}
+                    {{ form.submit(class="btn btn-primary d-grid gap-2 col-6 mx-auto", value = "Post") }}
                 </div>
             </form>
         {{ ckeditor.load() }}
