--- a/templates/post.html
+++ b/templates/post.html
@@ -11,13 +11,13 @@
             padding: 15px;
             font-size: 40px;
             text-align: center;
+            margin-top: 50px;
         }
 
         /* Card effect for challenges */
         .card {
             font-family: Arial, serif;
             padding: 20px;
-            margin-top: 20px;
             background-color: white;
             border-color: white;
         }
@@ -42,19 +42,20 @@
         <h5 class="card-subtitle mb-2 text-muted text-center">{{ post.created.strftime("%d %B, %Y") }}</h5>
         <div class="card mb-5">
             <div class="card-body text-start">
-                <p class="text-start">{{ post.body}}</p>
+                <p class="text-start">{{ post.body | safe}}</p>
+                <img class="card-img-bottom w-75 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ post.image }}" alt="post_img"  id="imgslot"/>
             </div>
-            <img class="card-img-bottom w-75 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ post.image }}" alt="post_img"  id="imgslot"/>
-        </div>
-        {% if post.username == current_user.username %}
-            <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
-                {% if current_user.is_authenticated %}
+            {% if post.email == current_user.email %}
+                <div class="d-grid gap-2 d-md-block" role="group">
                     <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.posts') }}" role="button">Back to Posts</a>
-                {% endif %}
-                <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
-                <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
-            </div>
-        {% endif %}
+                    <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
+                    <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
+                </div>
+            {% endif %}
+            {% if current_user.role == 'user' %}
+                <a type="button" class="btn btn-outline-primary btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('posts.posts') }}" role="button">Back to Posts</a>
+            {% endif %}
+        </div>
     </div>
 
 {% endblock %}
