--- a/templates/posts.html
+++ b/templates/posts.html
@@ -11,6 +11,7 @@
             padding: 30px;
             font-size: 40px;
             text-align: center;
+            margin-top: 30px;
         }
 
         .subtitle-description{
@@ -55,13 +56,8 @@
         <h1 class="title is-1 header">Posts</h1>
         <div class="subtitle-description2">
             <div class="description">
-                <p class="subtitle-description">
-                    Welcome to Greenify's learning space!
-                </p>
-                <p>
-                    Here you will be able to find useful information about different aspects
-                    related to climate change.
-                </p>
+                <p class="subtitle-description">Welcome to Greenify's learning space!</p>
+                <p> Here you will be able to find useful information about different aspects related to climate change.</p>
             </div>
         </div>
         {% for post in posts %}
@@ -70,17 +66,17 @@
                     <h2 class="card-title">{{ post.title }}</h2>
                     <h5 class="card-subtitle mb-2 text-muted">{{ post.created.strftime("%d %B, %Y") }}</h5>
                     <p class="text-start">{{ post.body | safe }}</p>
+                    <img class="card-img-bottom w-50 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ post.image }}" alt="post_img"  id="imgslot"/>
                 </div>
-                <img class="card-img-bottom w-50 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ post.image }}" alt="post_img"  id="imgslot"/>
-                {% if post.username == current_user.username %}
+                {% if post.email == current_user.email %}
                     <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
-                        <br>
-                        {% if current_user.is_authenticated %}
-                            <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
-                        {% endif %}
+                        <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
                         <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
                         <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
                     </div>
+                {% endif %}
+                {% if current_user.role == 'user' %}
+                    <a type="button" class="btn btn-outline-primary btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
                 {% endif %}
             </div>
         {% endfor %}
