--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -38,6 +38,7 @@
             </div>
         </div>
     {% endif %}
+    <h1 class="title is-1 header">Carbon Footprint Calculator</h1>
     <div class="tab-container">
         <ul class="nav nav-tabs justify-content-end" id="calculatorTab" role="tablist">
             <li class="nav-item" role="presentation">
