--- a/static/calculator.css
+++ b/static/calculator.css
@@ -1,10 +1,12 @@
 /* Align the tabs to the center of the page. */
 .tab-container {
     align-self: center;
-    margin-top: 15%;
     margin-bottom: 15%;
 }
 
+h1.header {
+    margin-top: 15%;
+}
 /* Fix error with the form jumping around during use */
 div.body-container {
     align-items: start;
