Change method of updating map with new events. Clarify currency used on carbon footprint calculator.

--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -154,7 +154,7 @@
 
                 <div id="travel" class="tab-pane fade show" role="tabpanel" aria-labelledby="home-tab">
 
-                    <p><b>How much money did you spend on..?</b></p>
+                    <p><b>How much money did you spend on ... last month? (£)</b></p>
 
                     <div class="input-container">
                         {% for error in form.vehicle_fuel.errors %}
@@ -201,7 +201,7 @@
                 </div>
                 <div id="home" class="tab-pane fade" role="tabpanel" aria-labelledby="home-tab">
 
-                    <p><b>How much money did you spend on..?</b></p>
+                    <p><b>How much money did you spend on ... last month? (£)</b></p>
 
                     <div class="input-container">
                         {% for error in form.electricity.errors %}
@@ -248,7 +248,7 @@
                 </div>
                 <div id="food" class="tab-pane fade" role="tabpanel" aria-labelledby="food-tab">
 
-                    <p><b>How much money did you spend on..?</b></p>
+                    <p><b>How much money did you spend on ... last month? (£)</b></p>
 
                     <div class="input-container">
                         {% for error in form.meat.errors %}
@@ -295,7 +295,7 @@
                 </div>
                 <div id="other" class="tab-pane fade" role="tabpanel" aria-labelledby="other-tab">
 
-                    <p><b>How much money did you spend on..?</b></p>
+                    <p><b>How much money did you spend on ... last month? (£)</b></p>
 
                     <div class="input-container">
                         {% for error in form.goods.errors %}
